@@ -8,6 +8,7 @@ xine-lib (1.1.16) 2008-??-??
   * Add a new meta-tag, "Composer", and use it in the FLAC demuxer.
   * Correct AAC channel ordering for multi-channel audio, at least for FLAC
     when using ALSA or PulseAudio. (Needs a proper fix.)
+  * Add position-based seeking independent from seekpoints.
 
 xine-lib (1.1.15) 2008-08-14
   * Security fixes:
